schema/testdata/errors/operation_where_expression_unresolvable_rhs.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        get getProfile(username) {
            //expect-error:40:47:AttributeExpressionError:unknown identifier 'context'
            @where(profile.identity  == context.identity)
        }
    }
}
